--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^14.18.0",
     "supabase": "^1.145.4"
   },
   "devDependencies": {
