--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.4",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.15.1",
     "stripe": "^14.18.0",
-    "supabase": "^1.145.4"
+    "supabase": "^1.145.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
