--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "axios": "^1.6.8",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
