--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:types": "npx supabase gen types typescript --project-id whlxyvgffbzhcejpmkje > app/lib/database.types.ts"
   },
   "dependencies": {
     "@next/third-parties": "^14.1.4",
@@ -15,6 +16,7 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.6.8",
+    "micro": "^10.0.1",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
